<resources>
    <string name="app_name">AccessManager</string>
    <string name="service_name">AccessManager Service</string>
    <string name="accessibility_open_drawer">Open Access Manager Navigation Drawer</string>
    <string name="accessibility_close_drawer">Close Access Manager Navigation Drawer</string>
    <string name="drawer_item_member_list">Member List</string>
    <string name="drawer_item_schedule_list">Schedule List</string>
    <string name="schedule_list_title">Schedule List</string>
    <string name="member_list_title">Member List</string>
    <string name="refresh_schedule_list">Refresh Schedule List</string>
    <string name="refresh_member_list">Refresh Member List</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="add_member">Add Member</string>
    <string name="schedule_add_dialog_create_schedule">Create Schedule</string>
    <string name="member_add_dialog_create_member">Create Member</string>
    <string name="title_create_schedule">Create Schedule</string>
    <string name="title_create_member">Create Member</string>
    <string name="hint_schedule_name">Schedule\'s Name</string>
    <string name="hint_schedule_start_date">Start Date: yyyyMMdd</string>
    <string name="hint_schedule_end_date">End Date: yyyyMMdd</string>
    <string name="hint_schedule_start_hour">Start Hour: 0 ~ 23</string>
    <string name="hint_schedule_end_hour">End Hour: 1 ~ 24</string>
    <string name="hint_member_name">Member\'s Name</string>
</resources>
