<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/ScrollView01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <EditText
        android:id="@+id/schedule_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/default_dialog_margin"
        android:hint="@string/hint_schedule_name"
        android:inputType="text"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:selectAllOnFocus="true">
        <requestFocus />
    </EditText>

    <ListView
        android:id="@+id/schedule_data_type"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <EditText
        android:id="@+id/schedule_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/default_dialog_margin"
        android:hint="@string/hint_schedule_start_date"
        android:inputType="date"
        android:focusable="true"
        android:focusableInTouchMode="true">
    </EditText>

    <EditText
        android:id="@+id/schedule_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/default_dialog_margin"
        android:hint="@string/hint_schedule_end_date"
        android:inputType="date"
        android:focusable="true"
        android:focusableInTouchMode="true">
    </EditText>

    <EditText
        android:id="@+id/schedule_start_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/default_dialog_margin"
        android:hint="@string/hint_schedule_start_hour"
        android:inputType="number"
        android:focusable="true"
        android:focusableInTouchMode="true">
    </EditText>

    <EditText
        android:id="@+id/schedule_end_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/default_dialog_margin"
        android:hint="@string/hint_schedule_end_hour"
        android:inputType="number"
        android:focusable="true"
        android:focusableInTouchMode="true">
    </EditText>

</LinearLayout>
</ScrollView>